--- a/frontPage.tex
+++ b/frontPage.tex
@@ -1,14 +1,14 @@
 \title{
 	\begin{center}
 	\vspace{3cm}
-	\includegraphics[width=11cm, height=3cm]{images/Logo-nou-eps.jpg}
+	\includegraphics[width=11cm, height=3cm]{images/institution_logo.png}
 	\end{center}
 	\begin{center}
 	\line(1,0){340}
 	\end{center}		
-	SUBJECT\\
+	TITLE\\
 	\vspace{2mm}
-	\Large Practical case tittle\\
+	\Large Subtittle\\
 	\line(1,0){340}
 	\vspace{2.5cm}
 	}
